sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:7: error: missing arguments for method plusPetit in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
      if (plusPetit(i-n , v) = true){
          ^